feat: init and implement fetch bank delivery

--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
-aku=cahyono
+PSQL_HOST=localhost
+PSQL_USER=postgres
+PSQL_PASSWORD=password123
+PSQL_DATABASE=scholarship
+PSQL_PORT=5432
+PSQL_SSL_MODE=disable
+PSQL_SCHEMA=public
