chore: create docker file

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,12 @@ PSQL_HOST=
 PSQL_USER=
 PSQL_PASSWORD=
 PSQL_DATABASE=
+# DEFAULT 5432
 PSQL_PORT=
+# DEFAULT disable
 PSQL_SSL_MODE=
-PSQL_SCHEMA=
+# DEFAULT public
+PSQL_SCHEMA=public
+
+SECRET_KEY=
+TOKEN_DURATION=
