feat: store payment after create scholarship

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,14 @@ EMAIL_DOMAIN=
 EMAIL_API_KEY=
 EMAIL_SENDER=
 EMAIL_PATH_ACTIVATE_USER=
+
+# Bank Transfer
+BANK_TRANSFER_NAME
+BANK_TRANSFER_ACCOUNT_NAME
+BANK_TRANSFER_ACCOUNT_NO
+BANK_TRANSFER_IMAGE_URL
+BANK_TRANSFER_IMAGE_WIDTH
+BANK_TRANSFER_IMAGE_HEIGHT
+
+# after create scholarship, deadline transfer to bangun ( hours )
+DEADLINE_PAYMENT=
